# d_airLapTimer

./: Advanced.md  CMakeLists.txt  Readme.md  config.txt  run.bat  test.bat
DaineseSrc/: CMakeLists.txt
DaineseSrc/include/: DaineseDataTypes.h  FileTypeInfo.h  FileTypesData.h  Plotting.h  analysis.h  config.h  dataCleaning.h  fileRead.h  global.h  inch.txt  lapTimes.h  latLong.h  latLongHelpers.h  matplotlibcpp.h  stringHelpers.h  timeData.h  timeHelpers.h  vectorHelpers.h  vectorSampling.h
DaineseSrc/src/: FileTypesData.cpp  Plotting.cpp  analysis.cpp  config.cpp  cpp.txt  daineseMain.cpp  dataCleaning.cpp  fileRead.cpp  inccpp.txt  lapTimes.cpp  latLongHelpers.cpp  stringHelpers.cpp  timeData.cpp  timeHelpers.cpp  vectorHelpers.cpp
Shann_Mosp_2020_09_02/: 0902-DAIR49-JUL1001.A0D  0902-DAIR49-JUL1001.A0E  0902-DAIR49-JUL1001.A0F  0902-DAIR49-JUL1001.A0G  0902-DAIR49-JUL1001.A0H  0902-DAIR49-JUL1001.A0I  0902-DAIR49-JUL1001.A0J  0902-DAIR49-JUL1001.A0K  0902-DAIR49-JUL1001.A0L  0902-DAIR49-JUL1001.A0M  0902-DAIR49-JUL1001.A0N  0902-DAIR49-JUL1001.A0O  0902-DAIR49-JUL1001.A0P  0902-DAIR49-JUL1001.A0X  0902-DAIR49-JUL1001.C00  0902-DAIR49-JUL1001.C01  0902-DAIR49-JUL1001.C02  0902-DAIR49-JUL1001.C03  0902-DAIR49-JUL1001.C04  0902-DAIR49-JUL1001.C06  0902-DAIR49-JUL1001.DDD  0902-DAIR49-JUL1001.HED  0902-DAIR49-JUL1001.LDD  AutoCalc.TXT  CalcTool.TXT  WinIt.TXT
tests/: AnalysisTests.cpp  CMakeLists.txt  ConfigTests.cpp  FileTypeInfoTests.cpp  ReadTests.cpp  TestLapDataGenerator.cpp  TestLapDataGenerator.h  TestLapDataGeneratorTests.cpp  TimeDataTests.cpp  dataCleaningTests.cpp  inctest.txt
